testsuite/tests/parser/should_fail/NumericUnderscoresFail0.stderr
NumericUnderscoresFail0.hs:11:20: error:
NumericUnderscoresFail0.hs:12:13: error:
